syntax = "proto3";

package user_service;

option java_multiple_files = true;
option java_package = "com.example.user_service";

//import "google/protobuf/any.proto";

service UserService {
  rpc createUser(CreateUserRequest) returns (CreateUserResponse) {}
  rpc updateUser(UpdateUserRequest) returns (User) {}
  rpc getUserByUsername(GetUserByUserNameRequest) returns (User) {}
  rpc updateUserPassword(ChangePasswordRequest) returns (User) {}
}

message User {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  string emailAddress = 4;
  string password = 5;
  string phoneNumber = 6;
  string contactAddress = 7;
  string profileImage = 8;
}

message CreateUserRequest {
  User user = 1;
}

message UpdateUserRequest {
  string firstName = 1;
  string lastName = 2;
  string phoneNumber = 3;
  string contactAddress = 4;
  string profileImage = 5;
  string emailAddress = 6;
}

message ChangePasswordRequest {
  string password = 1;
  string emailAddress = 2;
}

message CreateUserResponse{
  string id = 1;
  string statusMessage = 2;
}

message GetUserRequest {
  string id = 1;
}

message GetUserByUserNameRequest {
  string emailAddress = 1;
}